--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-    min-height: 100vh;
+    height: 100%;
     background-color: #ecf0f1;
 }
 
@@ -22,7 +22,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 100vh; 
+  height: 100%;
   /* padding: 1rem 0.5rem; */
 }
 
