--- a/src/mv.css
+++ b/src/mv.css
@@ -1,16 +1,16 @@
-body{
+body, html, #root, .App{
     height: 100%;
     width: 100%;
-    overflow: hidden;
-    position: absolute;
     margin: 0;
-    padding: 0;
 }
 model-viewer{
-    min-height: 100vh;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  width: 100vw;
+  height: 100%;
+  min-height: 100%;
+  box-sizing: border-box;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
