--- a/src/mv.css
+++ b/src/mv.css
@@ -2,8 +2,9 @@ body, html, #root, .App{
     height: 100%;
     width: 100%;
     margin: 0;
+    font-size: 20px;
 }
-model-viewer{
+model-viewer, .full-screen{
   width: 100vw;
   height: 100%;
   min-height: 100%;
@@ -13,6 +14,13 @@ model-viewer{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.btn-up {
+  width: 3em;
+  height: 2em;
+  border-top-left-radius: 110px;
+  border-top-right-radius: 110px;
 }
 
 button{
@@ -53,4 +61,12 @@ outline: none;
 
 #ar-button:focus-visible {
 outline: 1px solid #4285f4;
+}
+
+.catalog-item-img {
+  min-height: 150px;
+}
+.img-size-info p {
+  font-size: 15px;
+  margin-bottom: 0;
 }
