--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ body {
     font-size: 11px;
 }
 
-section {
+/* section {
     width: 100%;
     max-width: 420px;
     min-height: 400px;
@@ -43,7 +43,7 @@ section {
     padding: 1rem;
     background-color: rgba(0, 0, 0, 0.07);
     border-radius: 25px;
-}
+} */
 
 form {
     display: flex;
