--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@ form {
 /* a, a:visited {
     color: #2c3e50;
 } */
-
+/* 
 input[type="text"],
 input[type="password"],
 button,
@@ -66,7 +66,7 @@ textarea {
   font-size: 22px;
   padding: 0.25rem;
   border-radius: 0.5rem;
-}
+} */
 
 button {
   padding: 0.5rem;
