--- a/src/index.css
+++ b/src/index.css
@@ -7,15 +7,13 @@
 }
 
 html {
-    font-family: 'Nunito', sans-serif;
-    font-size: 22px;
+    font-family: 'Montserrat', sans-serif;
     color: #fff;
 }
 
 body {
     font-family: 'Montserrat', sans-serif;
     height: 100%;
-    background-color: #ecf0f1;
 }
 
 .App {
@@ -25,6 +23,42 @@ body {
   align-items: center;
   height: 100%;
   /* padding: 1rem 0.5rem; */
+}
+
+.demo-header {
+    padding-top: 40px;
+    margin-bottom: 20px;
+    font-size: 22px;
+}
+
+.lspace-50 {
+    letter-spacing: 2.2vw;
+}
+
+.text-settings {
+    color: #3B3B3B;
+}
+
+.form-check {
+position: relative;
+width: 60px;
+}
+
+.form-check-input {
+position: absolute;
+right: 0;
+}
+
+.form-check-label {
+position: absolute;
+left: 0;
+}
+
+
+.filter-btn {
+    padding: 0px 40px;
+    background-color: #D9D9D9;
+    font-size: 12px;
 }
 
 .catalog *{
@@ -141,11 +175,6 @@ li {
     margin: 0;
 }
 
-[type="checkbox"] {
-    height: 20px;
-    width: 20px;
-    margin: 0 5px 2px 2px;
-}
 
 .sidebar{
     width: 280px;
