--- a/src/features/modelview/productcard.css
+++ b/src/features/modelview/productcard.css
@@ -17,7 +17,7 @@
     height: 100%;
     max-height: 400px;
     display: block;
-    object-fit: cover;
+    object-fit: contain;
   }
   
   .details .box{
