--- a/src/features/demo/demo.css
+++ b/src/features/demo/demo.css
@@ -91,7 +91,7 @@ width: 60px;
     height: 100%;
     max-height: 400px;
     display: block;
-    object-fit: cover;
+    object-fit: contain;
   }
   
   .details .box{
@@ -134,7 +134,7 @@ width: 60px;
     width: 90px;
     height: 100%;
     display: block;
-    object-fit: cover;
+    object-fit: contain;
     border: 1px solid #ddd;
     margin-right: 5px;
     opacity: 0.7;
